New pages, general updates
New pages added: My Skills, My Work.
Media Queries added for some elements but not all that art needed.
hover effect added to some future clickable items

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
                         </div>
                         <p>julie ng</p>
                     </div>
-                    <ul class="options">
-                        <li>about</li>
-                        <li>skills</li>
-                        <li>work</li>
-                        <li>contact</li>
-                    </ul>
+                    <div class="options">
+                        <img src="images/hamburgerMenu.png">
+                        <ul>
+                            <li>about</li>
+                            <li>skills</li>
+                            <li>work</li>
+                            <li>contact</li>
+                        </ul>
+                    </div>
                 </nav>
             </header>
             <!--HOME PAGE-->
@@ -29,14 +32,15 @@
                     <img src="images/HeroCluster.svg">
                 </div>
                 <img class="divider" src="images/divider.png">
-                <div class="content">
+                <div class="homeContent">
                     <div class="text">
                         <!-- <img class="julieNg" src="images/JulieNg.png"> -->
                         <p><span id="julieNgText">julie ng </span> is a freelance designer who specializes in UI and IxD. Curiosity, challenge, and empathy fuel her passion for creating and optimizing experiences that immerse the user.
                         </p>
                     </div>
                     <div class="arrow">
-                        <img src="images/down-arrow-anim.png">
+                        <img id="arrowMain" src="images/down-arrow-anim-2.png">
+                        <img id="afterImage" src="images/down arrow afterimage-anim-2.png">
                     </div>
                 </div>
             </section>
@@ -56,6 +60,98 @@
                         <p>About me text. Lorem ipsum dolor sit amet consectetur. Elit viverra commodo sed consequat tristique morbi eget. Magna tortor hac eu velit mauris sed ut nec risus a rhoncus vitae. <br> <br>About me text. Lorem ipsum dolor sit amet consectetur. Elit viverra commodo sed consequat tristique morbi eget. Magna tortor hac eu velit mauris sed ut nec risus a rhoncus vitae. </p>
                     </div>
                 </div>
+            </section> -->
+            <!--My Skills-->
+            <section class="mySkills">
+                <div class="content>">
+                    <div class="title">
+                        <h1>My Skills</h1>
+                    </div>
+                    <div class="mySkillsContent">
+                        <!--UX Skills card-->
+                        <div class="card">
+                            <div class="textFrame">
+                                <h4>UX Skills</h4>
+                                <ul>
+                                    <li>User Interviews</li>
+                                    <li>Affinity Diagrams</li>
+                                    <li>Card Sorting</li>
+                                    <li>Persona Creation</li>
+                                    <li>User Observation</li>
+                                </ul>
+                            </div>
+                            <div class="shadow"></div>
+                        </div>
+                        <!--UI skills card-->
+                        <div class="card">
+                            <div class="textFrame">
+                                <h4>UX Skills</h4>
+                                <ul>
+                                    <li>Accessible Design</li>
+                                    <li>Data Visualization</li>
+                                    <li>Wireframes and page layout</li>
+                                    <li>Aesthetics</li>
+                                    <li>Branding</li>
+                                    <li> Color Theory</li>
+                                    <li>Gestalt Principles</li>
+                                    <li>Icon Design</li>
+                                </ul>
+                            </div>
+                            <div class="shadow"></div>
+                        </div>
+                        <!--Coding Languages-->
+                        <div class="card">
+                            <div class="textFrame">
+                                <h4>UX Skills</h4>
+                                <ul>
+                                    <li>HTML</li>
+                                    <li>CSS</li>
+                                    <li>JS</li>
+                                    <li>jQuery</li>
+                                    <li>Bootstrap</li>
+                                    <li>Github</li>
+                                </ul>
+                            </div>
+                            <div class="shadow"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--My Work Page-->
+            <section class="myWork">
+                <div class="myWorkContent">
+                    <div class="title">
+                        <h1>My Work</h1>
+                    </div>
+                    <div class="myWorkGrid">
+                        <!--Case Study 1-->
+                        <!-- <div class="caseStudy"> -->
+                            <!-- <div class="CS1Text"></div> -->
+                            <div id="CS1Title" class="mWCGridArea">
+                                <div class="CS1h3">
+                                    <h3>Roger Neilson House Site Redesign</h3>
+                                </div>
+                            </div>
+                            <div id="CS1Descript" class="mWCGridArea">
+                                <p>Roger Neilson House Description. Lorem ipsum dolor sit amet consectetur. Elit viverra commodo sed consequat tristique morbi eget. Magna tortor hac eu velit mauris sed ut nec risus a rhoncus vitae.</p>
+                            </div>    
+                            <div id="CS1Image" class="mWCGridArea"></div>
+                        <!-- </div> -->
+                        <!--Case Study 2-->
+                        <!-- <div class="caseStudy"> -->
+                            <!-- <div class="CS2Text"></div> -->
+                            <div id="CS2title" class="mWCGridArea">
+                                <div class="CS2h3">
+                                    <h3>Canadian Border Service Agency</h3>
+                                </div>
+                            </div>
+                            <div id="CS2Descript" class="mWCGridArea">
+                                <p>Canadian Border Service Agency Description. Lorem ipsum dolor sit amet consectetur. Elit viverra commodo sed consequat tristique morbi eget. Magna tortor hac eu velit mauris sed ut nec risus a rhoncus vitae.</p>
+                            </div>    
+                            <div id="CS2Image" class="mWCGridArea"></div>
+                        <!-- </div> -->
+                    </div>
+                </div>
             </section>
         </body>
-    </html> -->
+    </html>
