linked to bootstrap site
linked to bootstrap case study for RNH

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <!-- <div class="CS1Text"></div> -->
                             <div id="CS1Title" class="mWCGridArea">
                                 <div class="CS1h3">
-                                    <h3>Roger Neilson House Site Redesign</h3>
+                                    <a href="UX_UI_HW_20/index.html"><h3>Roger Neilson House Site Redesign</h3></a>
                                 </div>
                             </div>
                             <div id="CS1Descript" class="mWCGridArea">
